apps/palworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palworld-server
  namespace: palworld
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: palworld
  ports:
    - name: game
      port: 8211
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: palworld-makoto-server
  namespace: palworld
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: palworld-makoto
  ports:
    - name: game
      port: 8213
      protocol: UDP
